# LinearRegressionScratch

./: CMakeLists.txt
includes/: HypoTesting.hpp  LinearRegression.hpp
src/: HypoTesting.cpp  LinearRegression.cpp  main.cpp
